[package]
name = "exec-sat"
authors = ["Mateusz Szpakowski"]
license = "LGPL-2.1-or-later"
version = "0.1.1"
edition = "2021"
description = "Executes SAT solver and parses SAT solver output"
repository = "https://github.com/matszpk/exec-sat"
documentation = "https://docs.rs/exec-sat"
keywords = ["cnf", "logic", "SAT"]
categories = ["science", "logic", "mathematics"]

[dependencies]
thiserror = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
